--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,5 +1,6 @@
 \chapter{\abstractname}
-
-%TODO: Abstract
+% first draft
+Unhealthy diets and malnutrition can lead to physical aswell as mental deseases. The usage of a meal plan can help with maintaining a health diet. To get the most nutrients out of any meal, we require fresh ingredients. To enable a more effective approach to the organisation of grocery shopping, automaticly generated shopping lists provide a time-effective alternative to traditional paper based lists. We took an existing program and tried to optimize it using natural language processing.
+We implemented data preprocessing into the grocery list generation aswell as categorisation.While our preprocessing algorithm performed well at making lists more compact, it had its problems with sorting items into food categories, as the relevent information between the tasks shifted significantly.
 
 
