--- a/settings.tex
+++ b/settings.tex
@@ -8,7 +8,6 @@
 \usepackage[%
   backend=biber,
   url=false,
-  style=alphabetic,
   maxnames=4,
   minnames=3,
   maxbibnames=99,
@@ -25,8 +24,9 @@
 \usepackage[final]{microtype}
 \usepackage{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
-
-\bibliography{bibliography}
+\usepackage{multirow}
+%\addbibresource{refs.bib}
+\bibliography{refs}
 
 \setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
 \linespread{1.05} % adjust line spread for mathpazo font
